crates/module-system/sov-modules-macros/tests/integration/constants/create_gas_price_instead_of_unit.stderr
error[E0308]: mismatched types
 --> tests/integration/constants/create_gas_price_instead_of_unit.rs:4:35
  |
4 | pub const TEST_GAS: GasPrice<2> = config_gas_unit!("TEST_GAS_CONST_CORRECT");
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `GasPrice<2>`, found `GasUnit<2>`
  |
  = note: expected struct `GasPrice<2>`
             found struct `GasUnit<2>`
  = note: this error originates in the macro `config_gas_unit` (in Nightly builds, run with -Z macro-backtrace for more info)
